src/test/ui/issues/issue-25368.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-25368.rs:11:17
   |
LL |     let (tx, rx) = channel();
   |         -------- consider giving the pattern a type
...
LL |         tx.send(Foo{ foo: PhantomData }); //~ ERROR E0282
   |                 ^^^ cannot infer type for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
